--- a/AluguelCarros/AluguelCarros.Web/Views/Carro/Delete.cshtml
+++ b/AluguelCarros/AluguelCarros.Web/Views/Carro/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AluguelCarros.Dominio.Entidades.Cliente
+﻿@model AluguelCarros.Dominio.Entidades.Carro
 
 @{
     ViewBag.Title = "Delete";
@@ -8,39 +8,39 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Cliente</h4>
+    <h4>Carro</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.PrimeiroNome)
+            @Html.DisplayNameFor(model => model.Marca)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PrimeiroNome)
+            @Html.DisplayFor(model => model.Marca)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Sobrenome)
+            @Html.DisplayNameFor(model => model.Modelo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Sobrenome)
+            @Html.DisplayFor(model => model.Modelo)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Endereco)
+            @Html.DisplayNameFor(model => model.Cor)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Endereco)
+            @Html.DisplayFor(model => model.Cor)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Telefone)
+            @Html.DisplayNameFor(model => model.ValorDiario)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Telefone)
+            @Html.DisplayFor(model => model.ValorDiario)
         </dd>
 
     </dl>
